javali_tests/A3/A4_keinestamSchmid/success/CorrectBuiltInReadCall.javali
// Rule 2.3.2: Tests that a correct call to read succeeds.
class Main {
	void main() {
		int i;
		i = read();
	}
}