javali_tests/A3/A4_keinestamSchmid/fail/IncorrectRelationalOperations3.javali
// Rule 2.3.7: Tests that relational operations cannot be assigned to non-bool var.
class Main {
	void main() {
		int i;
		i = 1 < 2;
	}
}